--- a/ansible.cfg
+++ b/ansible.cfg
@@ -58,6 +58,7 @@ callback_plugins=/usr/local/lib/python2.7/dist-packages/ara/plugins/callbacks
 action_plugins=/usr/local/lib/python2.7/dist-packages/ara/plugins/actions
 library=/usr/local/lib/python2.7/dist-packages/ara/plugins/modules
 notification_callback = ara
+dir = /var/www/ara/.ara
 
 ############################################################################################
 # Resume standard ansible.cfg defaults section below                                       #
