--- a/ansible.cfg
+++ b/ansible.cfg
@@ -29,6 +29,11 @@
 # the home directory or /etc/ansible/ansible.cfg, whichever it
 # finds first
 
+# Point to the right ARA directory
+[ara]
+dir = /var/www/ara/.ara
+
+
 [defaults]
 ############################################################################################
 # CIDSE Options / Overrides for 'defaults'                                                 #
@@ -58,7 +63,6 @@ callback_plugins=/usr/local/lib/python2.7/dist-packages/ara/plugins/callbacks
 action_plugins=/usr/local/lib/python2.7/dist-packages/ara/plugins/actions
 library=/usr/local/lib/python2.7/dist-packages/ara/plugins/modules
 notification_callback = ara
-dir = /var/www/ara/.ara
 
 ############################################################################################
 # Resume standard ansible.cfg defaults section below                                       #
