Update ansible.cfg, file permissions

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -59,9 +59,9 @@ host_key_checking = False
 remote_user = sparky
 
 # Enable ARA
-callback_plugins=/usr/local/lib/python2.7/dist-packages/ara/plugins/callbacks
-action_plugins=/usr/local/lib/python2.7/dist-packages/ara/plugins/actions
-library=/usr/local/lib/python2.7/dist-packages/ara/plugins/modules
+callback_plugins= /usr/local/lib/python2.7/dist-packages/ara/plugins/callbacks
+action_plugins= /usr/local/lib/python2.7/dist-packages/ara/plugins/actions
+library= /usr/local/lib/python2.7/dist-packages/ara/plugins/modules
 notification_callback = ara
 
 ############################################################################################
