Update ansible.cfg manually

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -32,7 +32,7 @@
 # Point to the right ARA directory
 [ara]
 dir = /var/www/ara/.ara
-
+database = sqlite:///var/www/.ara/ansible.sqlite
 
 [defaults]
 ############################################################################################
