Update ara log location in ansible.cfg

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -33,6 +33,7 @@
 [ara]
 dir = /var/www/ara/.ara
 database = sqlite:///var/www/.ara/ansible.sqlite
+logfile = /var/www/ara/.ara/ara.log
 
 [defaults]
 ############################################################################################
