Fix file paths for ARA config

--- a/roles/ARA/defaults/main.yml
+++ b/roles/ARA/defaults/main.yml
@@ -19,6 +19,6 @@ ara_apache_packages:
 # Used in the ara vhost template
 ara_dns_suffix: "cidse.dhcp.asu.edu"
 
-ara_root_www_dir: "/var/www/ara"
+ara_root_www_dir: "/var/www/ara/.ara"
 ara_www_dir: "/var/www/ara/.ara"
-ara_db_dir: "sqlite:///var/www/.ara/ansible.sqlite"
+ara_db_dir: "sqlite:///var/www/ara/.ara/ansible.sqlite"
