--- a/ansible.cfg
+++ b/ansible.cfg
@@ -32,7 +32,7 @@
 # Point to the right ARA directory
 [ara]
 dir = /var/www/ara/.ara
-database = sqlite:///var/www/.ara/ansible.sqlite
+database = sqlite:///var/www/ara/.ara/ansible.sqlite
 logfile = /var/www/ara/.ara/ara.log
 
 [defaults]
