Test callback setting

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -47,7 +47,7 @@ logfile = /var/www/ara/.ara/ara.log
 # look for another section like this (or create it) to keep those sections clean as well
 
 # Use the YAML callback plugin (allows for nice output formatting in CLI)
-stdout_callback = yaml
+stdout_callback = ara
 
 # Use the stdout_callback when running ad-hoc commands (also for nice formatting)
 bin_ansible_callbacks = True
