--- a/ansible.cfg
+++ b/ansible.cfg
@@ -62,5 +62,5 @@ remote_user = sparky
 # Enable ARA
 callback_plugins = /usr/local/lib/python2.7/dist-packages/ara/plugins/callbacks
 action_plugins = /usr/local/lib/python2.7/dist-packages/ara/plugins/actions
-library = /usr/local/lib/python2.7/dist-packages/ara/plugins/modules
+# library = /usr/local/lib/python2.7/dist-packages/ara/plugins/modules
 notification_callback = ara
