--- a/ansible.cfg
+++ b/ansible.cfg
@@ -60,6 +60,7 @@ host_key_checking = False
 remote_user = sparky
 
 # Enable ARA
+callback_whitelist = ara
 callback_plugins = /usr/local/lib/python2.7/dist-packages/ara/plugins/callbacks
 action_plugins = /usr/local/lib/python2.7/dist-packages/ara/plugins/actions
 # library = /usr/local/lib/python2.7/dist-packages/ara/plugins/modules
