--- a/group_vars/lab_ssriva43.yml
+++ b/group_vars/lab_ssriva43.yml
@@ -4,4 +4,4 @@
 # The name of this file must match exactly with the name of the group in the Ansible inventory file
 joindomain_sudogroups:
   - "cidse-it"
-  - "CIDSE-ssriva_Lab_Admins"
+  - "CIDSE-ssriva43_Lab_Admins"
