--- a/roles/common/tasks/debian.yml
+++ b/roles/common/tasks/debian.yml
@@ -16,12 +16,12 @@
 ##########################################################################
 # Update Techs password                                                   #
 ##########################################################################
-#- 
-#  user: 
-#    name: techs
-#    password: "{{ common_techspass }}"
-#    update_password: always
-#  name: "debian | update techs password"
+- 
+  user: 
+    name: techs
+    password: "{{ common_newtechspass }}"
+    update_password: always
+  name: "debian | update techs password"
 
 ##########################################################################
 # Enable serial communication over USB for all users                     #
