--- a/roles/printers/defaults/main.yml
+++ b/roles/printers/defaults/main.yml
@@ -1,83 +1,37 @@
 ---
-cups_lpadmin_users:
-  - root
-cups_lpd: True
-cups_lpd_usn: cupslpd
+############################################################################################
+# DEFAULT VARIABLES FOR COMMON ROLE                                                        #
+############################################################################################
 
-cups_sysadmins_email: "sysadmins@{{ansible_fqdn}}"
+- cups_ppd_shared_location: /usr/share/cups/model/
 
-cups_cupsd_conf_template: ""
-cups_cups_browsed_conf_template: ""
-cups_snmp_conf_template: ""
+- cups_ppd_files_to_be_copied:
+    - Dell_B5460dn_Laser_Printer.ppd
+    - Dell_B5465dnf_Laser_MFP.ppd
 
-cups_hplip: True
-cups_ricoh_openprinting_ppds: True
-cups_openprinting_apt_required: "{{cups_ricoh_openprinting_ppds}}"
+- printer_list:
+   - name: BYENG_M1-40
+     socket: 10.218.104.31:9100/BYENG_M1-40
+     ppd: /usr/share/cups/model/Dell_B5460dn_Laser_Printer.ppd
+   - name: BYENG_312
+     socket: 10.218.104.32:9100/BYENG_312
+     ppd: /usr/share/cups/model/Dell_B5465dnf_Laser_MFP.ppd
+   - name: BYENG_4SW
+     socket: 10.218.104.33:9100/BYENG_4SW
+     ppd: /usr/share/cups/model/Dell_B5465dnf_Laser_MFP.ppd
+   - name: BYENG_4N
+     socket: 10.218.104.34:9100/BYENG_4N
+     ppd: /usr/share/cups/model/Dell_B5465dnf_Laser_MFP.ppd
+   - name: BYENG_4SE
+     socket: 10.218.104.35:9100/BYENG_4SE 
+     ppd: /usr/share/cups/model/Dell_B5465dnf_Laser_MFP.ppd
+   - name: BYENG_5W
+     socket: 10.218.104.36:9100/BYENG_5W
+     ppd: /usr/share/cups/model/Dell_B5465dnf_Laser_MFP.ppd
+   - name: BYENG_5E
+     socket: 10.218.104.37:9100/BYENG_5E
+     ppd: /usr/share/cups/model/Dell_B5465dnf_Laser_MFP.ppd 
+        
 
-cups_openprinting_apt_key_id: 24CBF5474CFD1E2F
-cups_openprinting_key_server: keyserver.ubuntu.com
-cups_openprinting_repo: "deb http://www.openprinting.org/download/printdriver/debian/ lsb3.2 main"
 
-cups_ppd_files_to_be_copied: ""
 
-cups__debops_ferm_dependent_rules:
-  - name: 'cups_ipp_lpr_directip'
-    chain: 'INPUT'
-    type: 'accept'
-    protocol: 'tcp'
-    dport: ['631', '515', '9100']
-    accept_any: True
-
-cups_purge_all_printers_and_classes: False
-
-cups_printer_uri_prefix: ""
-
-cups_printer_default_state: "present"
-cups_printer_default_report_ipp_supplies: True
-cups_printer_default_report_snmp_supplies: True
-cups_printer_default_is_shared: True
-cups_printer_default_enabled: True
-cups_printer_default_assign_cups_policy: "default"
-
-cups_class_default_state: "present"
-cups_class_default_is_shared: True
-
-cups_printers_and_classes_to_be_removed: []
-#  - TEST
-#  - Xerox
-
-cups_printer_list: []
-#  - name: "TestPrinter1"
-#    printer_or_class: "printer"
-#    state: "present"
-#    uri: "file:///dev/null"
-#  - name: "TestPrinter2"
-#    printer_or_class: "printer"
-#    state: "present"
-#    uri: "file:///dev/null"
-
-cups_class_list: []
-#  - name: "TestClass"
-#    state: "present"
-#    class_members:
-#      - "TestPrinter1"
-#      - "TestPrinter2"
-
-cups_packages_to_install:
-  - cups
-  - cups-pdf
-cups_xinetd_location: "/etc/xinetd.d"
-cups_tmp_location: "/tmp/cups-ansible"
-cups_admin_grp: lpadmin
-cups_services:
-  - cups
-cups_etc_location: "/etc/cups"
-cups_etc_files_perms_owner: "root"
-cups_etc_files_perms_grp: "lp"
-cups_etc_files_mode: 0644
-
-cups_expect_pkgs:
-  - "expect"
-  - "python-pexpect"
-cups_ppd_shared_location: "/opt/share/ppd"
-cups_ricoh_ppd_location: "/opt/OpenPrinting-Ricoh/ppds/Ricoh"
