--- a/roles/printers/tasks/main.yml
+++ b/roles/printers/tasks/main.yml
@@ -11,7 +11,7 @@
  
 - name: Copy PPDs in the ppds_to_be_copied folder
   copy:
-    src: "{{ item }}"
+    src: "{{ role_dir }}/files/{{ item }}"
     dest: "{{ cups_ppd_shared_location }}"
     owner: root
     group: root
