--- a/roles/printers/tasks/main.yml
+++ b/roles/printers/tasks/main.yml
@@ -8,7 +8,9 @@
 
 - name: Install CUPS
   apt: name=cups state=latest
+  
 - name: Copy PPDs in the ppds_to_be_copied folder
+  copy:
     src: "{{ role_dir }}/files/{{ item }}"
     dest: "{{ cups_ppd_shared_location }}"
     owner: root
